---
title: Abstract Category Item Entity
---

classDiagram
    direction LR

    class AbstractCategoryItemEntity {
        <<Abstract>>
        -Category category
        -string supplier
        -string unit
        +getCategory() Category
        +setCategory(Category)
        +getSupplier() string
        +setSupplier(string)
        +getUnit() string
        +setUnit(string)
    }

    class Group {
    }

    class Category {
    }

    class Category {
    }

    class Product {
    }

    class Task {
    }

    class AbstractEntity {
        <<Abstract>>
    }

    class EntityInterface {
        <<Interface>>
    }

    EntityInterface <|.. AbstractEntity
    AbstractEntity <|-- AbstractCategoryItemEntity
    AbstractCategoryItemEntity "0" --> "*" Category
    AbstractCategoryItemEntity <|-- Product
    AbstractCategoryItemEntity <|-- Task
    Category "0" --> "*" Group

    click EntityInterface call nodeCallback()
    click AbstractEntity call nodeCallback()
    click Group call nodeCallback()
    click Category call nodeCallback()
    click Product call nodeCallback()
    click Task call nodeCallback()
